<resources>
  <string name="title_activity_main">MainActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="add_game">Add Game</string>
  <string name="size_hint">Size</string>
  <string name="speed_hint">Speed</string>
  <string name="time_hint">Time</string>
  <string name="completed_hint">Completed</string>
  <string name="save_label">Save</string>
  <string name="cancel_label">Cancel</string>
  <string name="text_hint">Text of Game</string>

  <string name="error_message">Unable to process request. (%s)</string>
  <string name="error_dismiss">Dismiss</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials.</string>
  <string name="sign_out">Sign out</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="maze_speed_pref_key">maze_speed_pref</string>
  <string name="code_length_pref_title">Speed of Ball</string>
  <string name="maze_size_pref_key">maze_size_pref</string>
  <string name="maze_size_pref_title">Size of Maze</string>
  <string name="settings">Settings</string>

</resources>