<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.EditGameFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/size_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/size_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_check_black_24dp"
      app:tint="@color/submit"
      android:background="?android:selectableItemBackground"
      app:layout_constraintTop_toTopOf="@id/size_layout"
      app:layout_constraintEnd_toStartOf="@id/cancel"
      app:layout_constraintBottom_toBottomOf="@id/size_layout"
      android:text="@string/save_label"
      android:contentDescription="@string/save_label"/>

    <ImageButton
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_close_black_24dp"
      app:tint="@color/cancel"
      android:background="?android:selectableItemBackground"
      app:layout_constraintTop_toTopOf="@id/size_layout"
      app:layout_constraintBottom_toBottomOf="@id/size_layout"
      app:layout_constraintEnd_toEndOf="parent"
      android:text="@string/cancel_label"
      android:contentDescription="@string/cancel_label"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/speed_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/size_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/speed_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/time_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/speed_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/time_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:id="@+id/completed"
      app:layout_constraintTop_toBottomOf="@id/time_layout"
      app:layout_constraintEnd_toStartOf="@id/save"
      android:text="@string/completed_hint"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
